--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -137,11 +137,7 @@ LastLevel=/Game/OurProject/Maps/Forest_Scene/ForestScene
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/OurProject/Maps/Forest_Scene/Assets/audio/water_stream_trim_-_Trim_Cue.water_stream_trim_-_Trim_Cue
-OpenAssetsAtExit=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree4__0.tree4__0
-OpenAssetsAtExit=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree2__0.tree2__0
-OpenAssetsAtExit=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree3__0.tree3__0
-OpenAssetsAtExit=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree5__0.tree5__0
+OpenAssetsAtExit=/Game/OurProject/Character/ForestCharacter.ForestCharacter
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -158,7 +154,7 @@ PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap",
 [RootWindow]
 ScreenPosition=X=138.000 Y=181.000
 WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=True
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -3276,6 +3272,7 @@ SoundNodeAttenuation.AttenuationSourceDataOverride=True
 SoundCue.Advanced=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/audio/Desktop_2023_10_13_-_09_08_15_03_DVR_Cue.Desktop_2023_10_13_-_09_08_15_03_DVR_Cue;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/audio/water_stream_trim_-_Trim_Cue.water_stream_trim_-_Trim_Cue;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/audio/water_stream_trim_-_Trim.water_stream_trim_-_Trim;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/audio/water_stream_trim_Cue.water_stream_trim_Cue;
@@ -3295,7 +3292,6 @@ RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree5__0.t
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree2.tree2;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree2_leafshape1_1.tree2_leafshape1_1;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree2__0.tree2__0;
-RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree4.tree4;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -3442,7 +3438,7 @@ StaticMeshActor=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflec
 DirectionalLight=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,DirectionalLight.TransformCommon.Transform,
 SceneComponent=
 CapsuleComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,DirectionalLight.TransformCommon.Transform,
-PlayerStart=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,
+PlayerStart=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,DirectionalLight.TransformCommon.Transform,
 PointLight=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,
 Actor=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,DirectionalLight.TransformCommon.Transform,
 SkyAtmosphere=PostProcessVolume.Reflections.Reflections,PostProcessVolume.Lens.Lens,
@@ -3487,28 +3483,29 @@ LandscapeGizmoRenderComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Refl
 PrimitiveComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,
 AudioVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,DirectionalLight.TransformCommon.Transform,
 AmbientSound=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,DirectionalLight.TransformCommon.Transform,
+LandscapeGizmoActiveActor=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree5__0
-MRUItem1=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree3__0
-MRUItem2=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree2__0
-MRUItem3=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree4__0
-MRUItem4=/Game/OurProject/Maps/Forest_Scene/Assets/audio/water_stream_trim_-_Trim_Cue
-MRUItem5=/Game/OurProject/Maps/Forest_Scene/ForestScene
-MRUItem6=/Game/OurProject/Maps/Forest_Scene/Assets/rocks/moss_vert_paint_shader
-MRUItem7=/Game/OurProject/Maps/Forest_Scene/Assets/trees/anothertree_no_texture_1
-MRUItem8=/Game/OurProject/Maps/Forest_Scene/Assets/bushes/bush_shader_Inst
-MRUItem9=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/leafshape3_
-MRUItem10=/Game/OurProject/Maps/Forest_Scene/Assets/rocks/moss_shader_Inst
-MRUItem11=/Game/OurProject/Maps/Forest_Scene/Assets/rocks/moss_shader
-MRUItem12=/Game/OurProject/Maps/Forest_Scene/Assets/rocks/rock_shader_Inst
-MRUItem13=/Game/OurProject/Maps/Forest_Scene/Assets/rocks/rock_shader
-MRUItem14=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree3
-MRUItem15=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree4
-MRUItem16=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree2
-MRUItem17=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree5
-MRUItem18=/Game/OurProject/Maps/bedroom_scene/bedroom_scene
-MRUItem19=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_0_Inst_
+MRUItem0=/Game/OurProject/Character/ForestCharacter
+MRUItem1=/Game/OurProject/Maps/Forest_Scene/ForestScene
+MRUItem2=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree5__0
+MRUItem3=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree3__0
+MRUItem4=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree2__0
+MRUItem5=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree4__0
+MRUItem6=/Game/OurProject/Maps/Forest_Scene/Assets/audio/water_stream_trim_-_Trim_Cue
+MRUItem7=/Game/OurProject/Maps/Forest_Scene/Assets/rocks/moss_vert_paint_shader
+MRUItem8=/Game/OurProject/Maps/Forest_Scene/Assets/trees/anothertree_no_texture_1
+MRUItem9=/Game/OurProject/Maps/Forest_Scene/Assets/bushes/bush_shader_Inst
+MRUItem10=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/leafshape3_
+MRUItem11=/Game/OurProject/Maps/Forest_Scene/Assets/rocks/moss_shader_Inst
+MRUItem12=/Game/OurProject/Maps/Forest_Scene/Assets/rocks/moss_shader
+MRUItem13=/Game/OurProject/Maps/Forest_Scene/Assets/rocks/rock_shader_Inst
+MRUItem14=/Game/OurProject/Maps/Forest_Scene/Assets/rocks/rock_shader
+MRUItem15=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree3
+MRUItem16=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree4
+MRUItem17=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree2
+MRUItem18=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree5
+MRUItem19=/Game/OurProject/Maps/bedroom_scene/bedroom_scene
 
 [AssetEditorToolkitTabLocation]
 /Game/LevelPrototyping/Materials/MI_Solid_Blue.MI_Solid_Blue=1
