--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -133,11 +133,11 @@ GridEnabled=False
 RotGridEnabled=False
 
 [EditorStartup]
-LastLevel=/Game/OurProject/Maps/Forest_Scene/ForestScene
+LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/OurProject/Character/ForestCharacter.ForestCharacter
+OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/books/new_mats/closed_book_brown_mat.closed_book_brown_mat
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -154,7 +154,7 @@ PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap",
 [RootWindow]
 ScreenPosition=X=138.000 Y=181.000
 WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -174,7 +174,7 @@ WorldSettings=
 Info="\"Object\" "
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Lightmass.LightmassSettings\" "
 CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
@@ -191,7 +191,7 @@ MaterialInterface="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\
 PreviewMaterial="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Lightmass.LightmassSettings\" "
 Material="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Lightmass.LightmassSettings\" "
 MaterialExpressionMaterialFunctionCall="\"Object\" "
-MaterialExpression="\"Object\" \"Object.ChannelNames\" "
+MaterialExpression="\"Object\" "
 MaterialExpressionScalarParameter="\"Object\" \"Object.DefaultValue\" "
 MaterialExpressionParameter="\"Object\" \"Object.DefaultValue\" "
 MaterialExpressionConstant3Vector="\"Object\" \"Object.Constant\" "
@@ -204,8 +204,8 @@ MaterialExpressionRuntimeVirtualTextureSampleParameter="\"Object\" "
 MaterialExpressionRuntimeVirtualTextureSample="\"Object\" "
 MaterialExpressionTextureSampleParameter2D="\"Object\" \"Object.ChannelNames\" "
 MaterialExpressionTextureSampleParameter="\"Object\" \"Object.ChannelNames\" "
-MaterialExpressionTextureSample="\"Object\" \"Object.ChannelNames\" "
-MaterialExpressionTextureBase="\"Object\" \"Object.ChannelNames\" "
+MaterialExpressionTextureSample="\"Object\" "
+MaterialExpressionTextureBase="\"Object\" "
 LandscapeEditorObject="\"Object\" "
 LandscapeGizmoRenderComponent="\"Object\" "
 RuntimeVirtualTexture="\"Object\" "
@@ -1464,7 +1464,7 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/Control
 RecentsFiles=C:/Epic/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/OurProject/Maps/Forest_Scene/Assets/audio
+ContentBrowserTab1.SelectedPaths=/Game/OurProject/Maps/bedroom_scene/assets/books/new_mats
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.Locked=False
 ContentBrowserDrawer.FavoritesAreaExpanded=False
@@ -3272,6 +3272,13 @@ SoundNodeAttenuation.AttenuationSourceDataOverride=True
 SoundCue.Advanced=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/books/new_mats/closed_book_brown_mat.closed_book_brown_mat;
+RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book.closed_book;
+RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/coffee_table_mat.coffee_table_mat;
+RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/newcoffeetable.newcoffeetable;
+RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/study_desk/study_desk_top_mat.study_desk_top_mat;
+RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/study_desk/study_desk_legs_mat.study_desk_legs_mat;
+RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/study_desk/desk.desk;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/audio/Desktop_2023_10_13_-_09_08_15_03_DVR_Cue.Desktop_2023_10_13_-_09_08_15_03_DVR_Cue;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/audio/water_stream_trim_-_Trim_Cue.water_stream_trim_-_Trim_Cue;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/audio/water_stream_trim_-_Trim.water_stream_trim_-_Trim;
@@ -3285,13 +3292,6 @@ RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/bushes/bush_shader_Inst
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/bushes/bush_shader.bush_shader;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/rocks/moss_shader_Inst.moss_shader_Inst;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/rocks/rock01.rock01;
-RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/GHIBLIBARK2/NewMaterial.NewMaterial;
-RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree5.tree5;
-RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree5_leafshape1_1.tree5_leafshape1_1;
-RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree5__0.tree5__0;
-RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree2.tree2;
-RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree2_leafshape1_1.tree2_leafshape1_1;
-RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree2__0.tree2__0;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -3436,7 +3436,7 @@ PostProcessVolume=PostProcessVolume.Reflections.Reflections,PostProcessVolume.Le
 BrushComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,DirectionalLight.TransformCommon.Transform,
 StaticMeshActor=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,DirectionalLight.TransformCommon.Transform,
 DirectionalLight=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,DirectionalLight.TransformCommon.Transform,
-SceneComponent=
+SceneComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,DirectionalLight.TransformCommon.Transform,
 CapsuleComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,DirectionalLight.TransformCommon.Transform,
 PlayerStart=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,DirectionalLight.TransformCommon.Transform,
 PointLight=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,
@@ -3486,26 +3486,26 @@ AmbientSound=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflectio
 LandscapeGizmoActiveActor=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/OurProject/Character/ForestCharacter
-MRUItem1=/Game/OurProject/Maps/Forest_Scene/ForestScene
-MRUItem2=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree5__0
-MRUItem3=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree3__0
-MRUItem4=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree2__0
-MRUItem5=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree4__0
-MRUItem6=/Game/OurProject/Maps/Forest_Scene/Assets/audio/water_stream_trim_-_Trim_Cue
-MRUItem7=/Game/OurProject/Maps/Forest_Scene/Assets/rocks/moss_vert_paint_shader
-MRUItem8=/Game/OurProject/Maps/Forest_Scene/Assets/trees/anothertree_no_texture_1
-MRUItem9=/Game/OurProject/Maps/Forest_Scene/Assets/bushes/bush_shader_Inst
-MRUItem10=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/leafshape3_
-MRUItem11=/Game/OurProject/Maps/Forest_Scene/Assets/rocks/moss_shader_Inst
-MRUItem12=/Game/OurProject/Maps/Forest_Scene/Assets/rocks/moss_shader
-MRUItem13=/Game/OurProject/Maps/Forest_Scene/Assets/rocks/rock_shader_Inst
-MRUItem14=/Game/OurProject/Maps/Forest_Scene/Assets/rocks/rock_shader
-MRUItem15=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree3
-MRUItem16=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree4
-MRUItem17=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree2
-MRUItem18=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree5
-MRUItem19=/Game/OurProject/Maps/bedroom_scene/bedroom_scene
+MRUItem0=/Game/OurProject/Maps/bedroom_scene/assets/books/new_mats/closed_book_brown_mat
+MRUItem1=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/coffee_table_mat
+MRUItem2=/Game/OurProject/Maps/bedroom_scene/assets/study_desk/study_desk_top_mat
+MRUItem3=/Game/OurProject/Maps/bedroom_scene/assets/study_desk/study_desk_mat
+MRUItem4=/Game/OurProject/Character/ForestCharacter
+MRUItem5=/Game/OurProject/Maps/Forest_Scene/ForestScene
+MRUItem6=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree5__0
+MRUItem7=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree3__0
+MRUItem8=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree2__0
+MRUItem9=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree4__0
+MRUItem10=/Game/OurProject/Maps/Forest_Scene/Assets/audio/water_stream_trim_-_Trim_Cue
+MRUItem11=/Game/OurProject/Maps/Forest_Scene/Assets/rocks/moss_vert_paint_shader
+MRUItem12=/Game/OurProject/Maps/Forest_Scene/Assets/trees/anothertree_no_texture_1
+MRUItem13=/Game/OurProject/Maps/Forest_Scene/Assets/bushes/bush_shader_Inst
+MRUItem14=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/leafshape3_
+MRUItem15=/Game/OurProject/Maps/Forest_Scene/Assets/rocks/moss_shader_Inst
+MRUItem16=/Game/OurProject/Maps/Forest_Scene/Assets/rocks/moss_shader
+MRUItem17=/Game/OurProject/Maps/Forest_Scene/Assets/rocks/rock_shader_Inst
+MRUItem18=/Game/OurProject/Maps/Forest_Scene/Assets/rocks/rock_shader
+MRUItem19=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree3
 
 [AssetEditorToolkitTabLocation]
 /Game/LevelPrototyping/Materials/MI_Solid_Blue.MI_Solid_Blue=1
@@ -3700,6 +3700,10 @@ MRUItem19=/Game/OurProject/Maps/bedroom_scene/bedroom_scene
 /Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree2__0.tree2__0=1
 /Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree3__0.tree3__0=1
 /Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree5__0.tree5__0=1
+/Game/OurProject/Maps/bedroom_scene/assets/study_desk/study_desk_legs_mat.study_desk_legs_mat=1
+/Game/OurProject/Maps/bedroom_scene/assets/study_desk/study_desk_top_mat.study_desk_top_mat=1
+/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/coffee_table_mat.coffee_table_mat=1
+/Game/OurProject/Maps/bedroom_scene/assets/books/new_mats/closed_book_brown_mat.closed_book_brown_mat=1
 
 [MaterialInstanceEditor]
 bShowGrid=False
@@ -3994,7 +3998,7 @@ bBuildNanite=False
 bGenerateLightmapUVs=True
 bOneConvexHullPerUCX=True
 bAutoGenerateCollision=True
-bCombineMeshes=False
+bCombineMeshes=True
 DistanceFieldResolutionScale=1.000000
 bTransformVertexToAbsolute=True
 bBakePivotInVertex=False
