--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -136,7 +136,7 @@ SnapScaleEnabled=False
 LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1472,7 +1472,7 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/Control
 RecentsFiles=C:/Epic/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/TMStoragesPack1/Storages/meshes/ToysGames/Toy19
+ContentBrowserTab1.SelectedPaths=/Game/TMStoragesPack1
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.Locked=False
 ContentBrowserDrawer.FavoritesAreaExpanded=False
@@ -3364,6 +3364,7 @@ BP_BackyardCampfire04_C.Tick=True
 BP_BackyardCampfire04_C.Events=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/FreeFurniturePack/Meshes/SM_Classic_Cupboard_Door_Right.SM_Classic_Cupboard_Door_Right;
 RecentlyPlaced=/Game/ArchVizInteriorVol3/Meshes/SM_Opened_Book.SM_Opened_Book;
 RecentlyPlaced=/Game/TMBackyardPack2/Backyard/blueprints/BP_BackyardCampfire04.BP_BackyardCampfire04;
 RecentlyPlaced=/Game/TMBackyardPack2/Backyard/blueprints/BP_BackyardCampfire03.BP_BackyardCampfire03;
@@ -3383,7 +3384,6 @@ RecentlyPlaced=/Game/OldWest/VOL5/Meshes/SM_Rug_NN_01a.SM_Rug_NN_01a;
 RecentlyPlaced=/Game/OldWest/VOL5/Meshes/SM_Rug_01a.SM_Rug_01a;
 RecentlyPlaced=/Game/OldWest/VOL5/Meshes/SM_Crate_02a.SM_Crate_02a;
 RecentlyPlaced=/Game/FreeFurniturePack/Meshes/SM_Picture.SM_Picture;
-RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/books/new_mats/closed_book_brown_mat.closed_book_brown_mat;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
